// Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package evidenceos.v1;

service EvidenceOS {
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc CreateClaim(CreateClaimRequest) returns (CreateClaimResponse);
  rpc CommitArtifacts(CommitArtifactsRequest) returns (CommitArtifactsResponse);
  rpc FreezeGates(FreezeGatesRequest) returns (FreezeGatesResponse);
  rpc SealClaim(SealClaimRequest) returns (SealClaimResponse);
  rpc ExecuteClaim(ExecuteClaimRequest) returns (ExecuteClaimResponse);
  rpc GetCapsule(GetCapsuleRequest) returns (GetCapsuleResponse);
  rpc GetSignedTreeHead(GetSignedTreeHeadRequest) returns (GetSignedTreeHeadResponse);
  rpc GetInclusionProof(GetInclusionProofRequest) returns (GetInclusionProofResponse);
  rpc GetConsistencyProof(GetConsistencyProofRequest) returns (GetConsistencyProofResponse);
  rpc GetRevocationFeed(GetRevocationFeedRequest) returns (GetRevocationFeedResponse);
}

message HealthRequest {}
message HealthResponse { string status = 1; }

enum ClaimState {
  CLAIM_STATE_UNSPECIFIED = 0;
  CLAIM_STATE_UNCOMMITTED = 1;
  CLAIM_STATE_COMMITTED = 2;
  CLAIM_STATE_SEALED = 3;
  CLAIM_STATE_EXECUTING = 4;
  CLAIM_STATE_SETTLED = 5;
  CLAIM_STATE_CERTIFIED = 6;
  CLAIM_STATE_REVOKED = 7;
  CLAIM_STATE_TAINTED = 8;
  CLAIM_STATE_STALE = 9;
  CLAIM_STATE_FROZEN = 10;
}

enum Decision {
  DECISION_UNSPECIFIED = 0;
  DECISION_APPROVE = 1;
  DECISION_REJECT = 2;
  DECISION_DEFER = 3;
}

message CreateClaimRequest {
  bytes topic_id = 1;         // 32 bytes
  bytes holdout_handle_id = 2; // 32 bytes
  bytes phys_hir_hash = 3;    // 32 bytes
  uint64 epoch_size = 4;
  uint32 oracle_num_symbols = 5;
  double alpha = 6;
  uint64 access_credit = 7;
}

message CreateClaimResponse {
  bytes claim_id = 1; // 32 bytes
  ClaimState state = 2;
}

message Artifact {
  bytes artifact_hash = 1; // 32 bytes
  string kind = 2;
}

message CommitArtifactsRequest {
  bytes claim_id = 1;
  repeated Artifact artifacts = 2;
}

message CommitArtifactsResponse { ClaimState state = 1; }

message FreezeGatesRequest { bytes claim_id = 1; }
message FreezeGatesResponse { ClaimState state = 1; }

message SealClaimRequest { bytes claim_id = 1; }
message SealClaimResponse { ClaimState state = 1; }

message ExecuteClaimRequest {
  bytes claim_id = 1;
  Decision decision = 2;
  repeated uint32 reason_codes = 3;
  bytes canonical_output = 4;
}

message ExecuteClaimResponse {
  ClaimState state = 1;
  bytes capsule_hash = 2;
  uint64 etl_index = 3;
}

message GetCapsuleRequest { bytes claim_id = 1; }
message GetCapsuleResponse {
  bytes capsule_bytes = 1;
  bytes capsule_hash = 2;
  uint64 etl_index = 3;
}

message GetSignedTreeHeadRequest {}
message GetSignedTreeHeadResponse {
  uint64 tree_size = 1;
  bytes root_hash = 2;
  bytes signature = 3;
}

message GetInclusionProofRequest {
  uint64 leaf_index = 1;
}

message GetInclusionProofResponse {
  bytes leaf_hash = 1;
  repeated bytes sibling_hashes = 2;
  bytes root_hash = 3;
}

message GetConsistencyProofRequest {
  uint64 first_tree_size = 1;
  uint64 second_tree_size = 2;
}

message GetConsistencyProofResponse {
  bool consistent = 1;
  bytes first_root_hash = 2;
  bytes second_root_hash = 3;
}

message GetRevocationFeedRequest {}
message RevocationEntry {
  bytes claim_id = 1;
  uint64 timestamp_unix = 2;
}
message GetRevocationFeedResponse {
  repeated RevocationEntry entries = 1;
  bytes signature = 2;
}
